--- a/zonvon-website/css/style.css
+++ b/zonvon-website/css/style.css
@@ -530,6 +530,8 @@ section.jumbobox {
 	text-align:center;
   width: 250px;
   height: 250px;
+  margin: auto;
+  margin-bottom: 80px;
   /*background-position: center center;*/
   /*background-repeat: no-repeat;*/
 }
